--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             width: 900px;
             height: 500px;
 
-            background-color: greenyellow;
+            background-color: green;
 
             display: flex;
             flex-direction: column;
