--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <h2>This is  subtitle</h2>
     <input type="text" id="input-box">
     <div class="divpractice">
-        <div class="first">div first</div>
+        <div class="first">first div</div>
         <div class="second" id="second-box">
             <button onclick="hey()">first</button>
             <button>second</button>
